// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugin-garfish cli cli get runtime config 1`] = `
{
  "masterApp": {
    "basename": "/test",
  },
}
`;

exports[`plugin-garfish cli cli get runtime features config 1`] = `
{
  "masterApp": {
    "basename": "/test2",
  },
}
`;

exports[`plugin-garfish cli cli set runtime config 1`] = `
{
  "masterApp": true,
}
`;

exports[`plugin-garfish cli cli set runtime features config 1`] = `
{
  "features": {
    "masterApp": true,
  },
}
`;

exports[`plugin-garfish cli webpack config close external and use js entry 1`] = `
{
  "externals": {
    "react": "react",
    "react-dom": "react-dom",
  },
  "optimization": {
    "runtimeChunk": false,
    "splitChunks": {
      "chunks": "async",
    },
  },
  "output": {
    "filename": "index.js",
    "libraryTarget": "umd",
    "publicPath": "//localhost:8080/",
  },
}
`;

exports[`plugin-garfish cli webpack config default micro config 1`] = `
{
  "output": {
    "libraryTarget": "umd",
    "publicPath": "//localhost:8080/",
  },
  "plugins": [
    HTMLWebpackPlugin {},
  ],
}
`;
